Fix Render static site configuration
- Updated render.yaml to use runtime: static
- Added static.json for explicit static site configuration
- Removed unnecessary route configurations
- Set root directory as publish path

--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,6 @@
 services:
   - type: web
     name: handy-jimmy
-    env: static
+    runtime: static
     staticPublishPath: .
     buildCommand: ""
-    headers:
-      - path: /*
-        name: Cache-Control
-        value: public, max-age=3600
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
